force-app/main/default/objects/SPEN_TransmissionApplicationFeeRules__c/SPEN_TransmissionApplicationFeeRules__c.object-meta.xml
<CustomObject>
    <description>This is an object to store the rules of calculating the Fixed Cumulative Application Fee Values. And provide the admin to edit the rules when necessary.</description>
    <label>Transmission Application Fee Rules</label>
    <nameField>
        <displayFormat>Rule-{0000}</displayFormat>
        <label>Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transmission Application Fee Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>