force-app/main/default/objects/SPEN_TransmissionApplicationFeeRules__c/fields/SPEN_ApplicationStage__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ApplicationStage__c</fullName>
    <description>This field is for Transmission Process</description>
    <label>Application Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Mod-App</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>