force-app/main/default/objects/SPEN_TransmissionApplicationFeeRules__c/fields/SPEN_ApplicationType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ApplicationType__c</fullName>
    <description>This field is for Transmission Process</description>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>New Onshore Supply Point</fullName>
            </value>
            <value>
                <fullName>SOW</fullName>
            </value>
            <value>
                <fullName>BELLA (Dist)</fullName>
            </value>
            <value>
                <fullName>BELLA (Trans)</fullName>
            </value>
            <value>
                <fullName>BEGA (Dist)</fullName>
            </value>
            <value>
                <fullName>BEGA (Trans)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>