force-app/main/default/objects/SPEN_TransmissionApplicationFeeRules__c/fields/SPEN_ContractArea__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ContractArea__c</fullName>
    <description>This field is for Transmission process.</description>
    <label>Contract Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Area</fullName>
            </value>
            <value>
                <fullName>Affected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>