force-app/main/default/objects/SPEN_TransmissionApplicationFeeRules__c/fields/SPEN_DailyRate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DailyRate__c</fullName>
    <description>This field is for Transmission Process.</description>
    <label>Daily Rate</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>