force-app/main/default/objects/SPEN_TransmissionApplicationFeeRules__c/fields/SPEN_FeeType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FeeType__c</fullName>
    <description>Formula field for Transmission process.</description>
    <formula>If(RecordType.DeveloperName==&apos;SPEN_FixedApplicationFee&apos;,&apos;Fixed&apos;,If(RecordType.DeveloperName==&apos;SPEN_VariableApplicationFee&apos;,&apos;Variable&apos;,&apos;NA&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Type</label>
    <type>Text</type>
</CustomField>