force-app/main/default/objects/SPEN_TransmissionApplicationFeeRules__c/fields/SPEN_FixedCumulativeApplicationFee__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FixedCumulativeApplicationFee__c</fullName>
    <description>This field is for Transmission Process</description>
    <label>Fixed Cumulative Application Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>