force-app/main/default/objects/SPEN_TransmissionApplicationFeeRules__c/fields/SPEN_isActive__c.field-meta.xml
<CustomField>
    <fullName>SPEN_isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is for Transmission Process. To check if the rule is active</description>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>