force-app/main/default/objects/SPEN_TransmissionApplicationFeeRules__c/fields/SPEN_LocationType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LocationType__c</fullName>
    <description>This field is for Transmission Process</description>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onshore</fullName>
            </value>
            <value>
                <fullName>Offshore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>