force-app/main/default/objects/SPEN_TransmissionApplicationFeeRules__c/fields/SPEN_MINSizeMWsCECExport__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MINSizeMWsCECExport__c</fullName>
    <description>This field is for Transmission Process</description>
    <label>MIN Size MWs CEC Export</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>