force-app/main/default/objects/SPEN_TransmissionApplicationFeeRules__c/fields/SPEN_Role__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Role__c</fullName>
    <description>This field is for Transmission Process</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Department manager</fullName>
            </value>
            <value>
                <fullName>Senior Management</fullName>
            </value>
            <value>
                <fullName>Senior Member Of Staff</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Support Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>