force-app/main/default/objects/SPEN_TransmissionApplicationFeeRules__c/fields/SPEN_Team__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Team__c</fullName>
    <description>This field is for Transmission Process</description>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Design</fullName>
            </value>
            <value>
                <fullName>System Design Manager Approval</fullName>
            </value>
            <value>
                <fullName>Engineering Design</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Development Manager Approval</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Commercial Manager Approval</fullName>
            </value>
            <value>
                <fullName>Delivery Manager Approval</fullName>
            </value>
            <value>
                <fullName>Support Staff</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Senior Management</fullName>
            </value>
            <value>
                <fullName>Offer Questions Time Spent</fullName>
            </value>
            <value>
                <fullName>Engineering Design Manager Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>