force-app/main/default/objects/SPEN_TransmissionApplicationFeeRules__c/fields/SPEN_TertiaryTransmissionTechnologyType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TertiaryTransmissionTechnologyType__c</fullName>
    <description>This field is for Transmission Process</description>
    <label>Tertiary Transmission Technology Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wind</fullName>
            </value>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>CCGT</fullName>
            </value>
            <value>
                <fullName>Bio-fuels</fullName>
            </value>
            <value>
                <fullName>CHP</fullName>
            </value>
            <value>
                <fullName>EFW</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Hydro</fullName>
            </value>
            <value>
                <fullName>Power Plant</fullName>
            </value>
            <value>
                <fullName>Interconnector</fullName>
            </value>
            <value>
                <fullName>Tidal</fullName>
            </value>
            <value>
                <fullName>Sync Comp</fullName>
            </value>
            <value>
                <fullName>Demand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>