force-app/main/default/objects/SPEN_TransmissionApplicationFeeRules__c/recordTypes/SPEN_FixedApplicationFee.recordType-meta.xml
<RecordType>
    <fullName>SPEN_FixedApplicationFee</fullName>
    <active>true</active>
    <label>Fixed Application Fee</label>
</RecordType>