force-app/main/default/objects/SPEN_TransmissionApplicationFeeRules__c/recordTypes/SPEN_VariableApplicationFee.recordType-meta.xml
<RecordType>
    <fullName>SPEN_VariableApplicationFee</fullName>
    <active>true</active>
    <label>Variable Application Fee</label>
</RecordType>