force-app/main/default/objects/SPEN_TransmissionApplicationFeeRules__c/listViews/SPEN_VariableApplicationFee.listView-meta.xml
<ListView>
    <fullName>SPEN_VariableApplicationFee</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Team__c</columns>
    <columns>SPEN_Role__c</columns>
    <columns>SPEN_DailyRate__c</columns>
    <columns>SPEN_DailyHours__c</columns>
    <columns>SPEN_isActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SPEN_TransmissionApplicationFeeRules__c.SPEN_VariableApplicationFee</value>
    </filters>
    <label>Variable Application Fee</label>
</ListView>